# AmalgamUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Components/: CMakeLists.txt
Source/Components/Private/: Button.cpp  Checkbox.cpp  Component.cpp  ConfirmationDialog.cpp  Container.cpp  Image.cpp  Text.cpp  TextBox.cpp  TextInput.cpp  Thumbnail.cpp  TiledImage.cpp  VerticalGridContainer.cpp
Source/Components/Public/AUI/: Button.h  Checkbox.h  Component.h  ConfirmationDialog.h  Container.h  Image.h  Text.h  TextBox.h  TextInput.h  Thumbnail.h  TiledImage.h  VerticalGridContainer.h
Source/Core/: CMakeLists.txt
Source/Core/Private/: Core.cpp  Initializer.cpp  Screen.cpp  Widget.cpp  WidgetLocator.cpp  WidgetPath.cpp  WidgetWeakRef.cpp  Window.cpp
Source/Core/Public/AUI/: Core.h  EventTypes.h  Initializer.h  InternalEvent.h  Screen.h  ScreenResolution.h  Widget.h  WidgetLocator.h  WidgetPath.h  WidgetWeakRef.h  Window.h
Source/EventRouting/: CMakeLists.txt
Source/EventRouting/Private/: EventRouter.cpp
Source/EventRouting/Public/AUI/: DragDropData.h  EventResult.h  EventRouter.h  FocusLostType.h  MouseButtonType.h
Source/Private/: Component.cpp  Image.cpp  Page.cpp
Source/Public/AUI/: Component.h  Image.h  Page.h
Source/SharedDefinitions/: CMakeLists.txt
Source/SharedDefinitions/Public/AUI/: Margins.h  Orientation.h  Padding.h
Source/Utility/: CMakeLists.txt
Source/Utility/Private/: AssetCache.cpp  Log.cpp  ResourceManager.cpp  SDLHelpers.cpp  ScalingHelpers.cpp  Timer.cpp  WidgetLocator.cpp  WidgetPath.cpp  WidgetWeakRef.cpp
Source/Utility/Public/AUI/: AssetCache.h  ResourceManager.h  SDLHelpers.h  ScalingHelpers.h  WidgetLocator.h  WidgetPath.h  WidgetWeakRef.h
Source/Utility/Public/AUI/Internal/: AUIAssert.h  Assert.h  Ignore.h  Log.h  ResourceManager.h  ScalingHelpers.h  Timer.h
Source/Widgets/: CMakeLists.txt
Source/Widgets/Private/: Button.cpp  Checkbox.cpp  CollapsibleContainer.cpp  ConfirmationDialog.cpp  Container.cpp  FlowContainer.cpp  HorizontalGridContainer.cpp  Image.cpp  ScrollArea.cpp  Scrollbar.cpp  Text.cpp  TextButton.cpp  TextInput.cpp  Thumbnail.cpp  TiledImage.cpp  VerticalGridContainer.cpp  VerticalListContainer.cpp  Widget.cpp
Source/Widgets/Private/ImageType/: ImageType.cpp  MultiResImage.cpp  NineSliceImage.cpp  SimpleImage.cpp  TiledImage.cpp
Source/Widgets/Public/AUI/: Button.h  Checkbox.h  CollapsibleContainer.h  ConfirmationDialog.h  Container.h  FlowContainer.h  HorizontalGridContainer.h  Image.h  NineSliceImage.h  ScrollArea.h  Scrollbar.h  Text.h  TextButton.h  TextInput.h  Thumbnail.h  TiledImage.h  VerticalGridContainer.h  VerticalListContainer.h  Widget.h  Window.h
Source/Widgets/Public/AUI/ImageType/: ImageType.h  MultiResImage.h  NineSliceImage.h  SimpleImage.h  TiledImage.h
Tests/: CMakeLists.txt
Tests/Private/: TestMain.cpp  TestWidgetLocator.cpp  TestWidgetPath.cpp  TestWidgetWeakRef.cpp
